# litelytics

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  add-site.js  authenticate.js  dune-project  get-data.js  go.mod  go.sum  index.html  list-sites.js  log.js  main.go  meson.build  migrate.sh  nixpacks.toml  package.json  pnpm-lock.yaml  prepare-db.sql  readme.md  server.mjs  simpleclient.js  track.js  util.mjs
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: common-redhat.sh
api/: router.go  siteData.go  sites.go  track.go
auth/: createUser.go  logic.go  login.go  logout.go  router.go  types.go
db/: index.js
dbutil/: client.go
ent/: client.go  config.go  ent.go  mutation.go  site.go  site_create.go  site_delete.go  site_query.go  site_update.go  tx.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go  visit.go  visit_create.go  visit_delete.go  visit_query.go  visit_update.go
ent/enttest/: enttest.go
ent/hook/: hook.go
ent/migrate/: schema.go
ent/predicate/: predicate.go
ent/runtime/: runtime.go
ent/schema/: site.go  user.go  visit.go
ent/site/: site.go  where.go
ent/user/: user.go  where.go
ent/visit/: visit.go  where.go
esy.lock/: index.json
frontend/: package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/public/: app.css  simpleclient.js
frontend/src/: App.svelte  App.vue  main.ts  style.css
migrations/: 20220826204627_create_sites.down.sql  20220826204627_create_sites.up.sql  20220826204705_create_users.up.sql  20220826204733_create_usersites.down.sql  20220826204733_create_usersites.up.sql  20220826204757_create_visits.down.sql  20220826204757_create_visits.up.sql
migrations/2022-04-21-121228_create_sites/: down.sql  up.sql
migrations/2022-04-21-121743_create_users/: up.sql
migrations/2022-04-21-121851_create_usersites/: down.sql  up.sql
migrations/2022-04-21-122051_create_visits/: down.sql  up.sql
public/: app.css  app.js  login.html  login.js
public/.well-known/: gpc.json
public/js/: site-info.js  sites.js
src/: api.rs  app.hh  auth.rs  crypt.cc  crypt.hh  crypto.cc  crypto.hh  dashboard_context.rs  db.cc  db.hh  db.rs  dune  env.cc  env.hh  main.cc  main.cpp  main.re  main.rs  meson.build  models.rs  nav.rs  page.rs  page_context.rs  schema.rs
src/auth/: AuthController.cc  AuthController.hh  auth.hh  meson.build  util.cc  util.hh
src/util/: except.hh  meson.build  misc.cc  misc.hh  mvc.cc  mvc.hh
static/: app.css
static/js/: lit-core.min.js  site-info.js  sites.js
templates/: about.html.tera  base.html  base.html.tera  base_footer.html  base_header.html  dashboard_page.html  dashboard_page.html.tera  index.html  index.html.tera  login.html  login.html.tera  navLink.html  sidenav.html  site_info.html  site_info.html.tera
templates/partials/: components.html  components.html.tera  nav_utils.html.tera  (+2 more)
util/: dashboardContext.go  env.go  wrapHandler.go
(+19 files in other folders)
