cmake_minimum_required(VERSION 3.10)
project(litelytics CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
file(GLOB SRC_FILES src/*.cc src/**/*.cc)
add_executable(litelytics ${SRC_FILES})
find_package(Crow REQUIRED)
target_link_libraries(litelytics PUBLIC Crow::Crow)
target_link_libraries(litelytics PRIVATE crypto)
target_link_libraries(litelytics PRIVATE -lpq -lpqxx)