[package]
name = "litelytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
diesel = { version = "1.4.4", features = ["postgres"] }
serde = "1.0.136"
serde_derive = "1.0.136"
dotenv = "0.15.0"
paste = "1.0.7"
