[package]
name = "litelytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.16.0"
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = "1.0.138"
serde_derive = "1.0.138"
dotenv = "0.15.0"
paste = "1.0.7"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.19.2", features = ["full"] }
lazy_static = "1.4.0"
anyhow = "1.0.58"
sha2 = "0.10.2"
serde_json = "1"
chrono = "0.4.22"
